--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
   <div class="flex flex-col md:flex-row items-center md:space-x-10 fade-in">
     <img src="/image/ummd.png" alt="Profile" class="w-32 md:w-48 h-32 md:h-48 rounded-full border-4 border-pink-500 mb-4 md:mb-0 shadow-lg hover:scale-105 transition-transform duration-500">
     <p class="text-gray-300 text-base md:text-lg md:text-left">
-      I'm a passionate Full Stack Developer specializing in modern, responsive web applications. I love creating professional, interactive websites using React, Tailwind CSS, HTML, and JavaScript. Always learning, always improving!
+    I am a passionate full-stack web developer with expertise in HTML, CSS, JavaScript, Node.js, Express, MongoDB, Mongoose, Tailwind CSS, TypeScript, and React. I specialize in building modern, responsive, and user-friendly web applications.
+With strong experience in the MERN stack, I enjoy creating scalable solutions and turning ideas into functional digital products. I am constantly learning and improving my skills to stay up-to-date with the latest web development trends and best practices.
     </p>
   </div>
 </section>
@@ -113,35 +114,35 @@
   <div class="max-w-5xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6 md:gap-8">
     <div class="bg-gray-800 p-4 md:p-6 rounded-xl shadow hover:scale-105 transition-transform duration-500 fade-in">
       <h4 class="font-bold text-pink-500 mb-1 md:mb-2">HTML</h4>
-      <p class="text-sm md:text-base">Semantic & Clean Code</p>
+      <p class="text-sm md:text-base">I have strong knowledge of HTML5 and semantic markup, allowing me to create well-structured, accessible, and SEO-friendly web pages. I can efficiently use elements, forms, tables, multimedia, and links to build dynamic and responsive layouts.</p>
     </div>
     <div class="bg-gray-800 p-4 md:p-6 rounded-xl shadow hover:scale-105 transition-transform duration-500 fade-in">
       <h4 class="font-bold text-pink-500 mb-1 md:mb-2">CSS</h4>
-      <p class="text-sm md:text-base">Responsive & Modern Layouts</p>
+      <p class="text-sm md:text-base">Skilled in CSS3 and modern styling techniques, including Flexbox, Grid, animations, and responsive design, to build visually appealing and user-friendly interfaces.</p>
     </div>
     <div class="bg-gray-800 p-4 md:p-6 rounded-xl shadow hover:scale-105 transition-transform duration-500 fade-in">
       <h4 class="font-bold text-pink-500 mb-1 md:mb-2">JavaScript</h4>
-      <p class="text-sm md:text-base">Interactive & Dynamic UI</p>
+      <p class="text-sm md:text-base">Strong knowledge of JavaScript (ES6+), enabling creation of dynamic, interactive, and functional web applications</p>
     </div>
     <div class="bg-gray-800 p-4 md:p-6 rounded-xl shadow hover:scale-105 transition-transform duration-500 fade-in">
       <h4 class="font-bold text-pink-500 mb-1 md:mb-2">React</h4>
-      <p class="text-sm md:text-base">Modern SPA Development</p>
+      <p class="text-sm md:text-base">Experienced in React.js, building component-based, fast, and responsive front-end applications, with state management and hooks.</p>
     </div>
     <div class="bg-gray-800 p-4 md:p-6 rounded-xl shadow hover:scale-105 transition-transform duration-500 fade-in">
       <h4 class="font-bold text-pink-500 mb-1 md:mb-2">Tailwind CSS</h4>
-      <p class="text-sm md:text-base">Responsive & Modern Design</p>
+      <p class="text-sm md:text-base">Experienced in Tailwind CSS, enabling rapid, utility-first, and responsive styling for modern web interfaces.</p>
     </div>
     <div class="bg-gray-800 p-4 md:p-6 rounded-xl shadow hover:scale-105 transition-transform duration-500 fade-in">
       <h4 class="font-bold text-pink-500 mb-1 md:mb-2">Node.js</h4>
-      <p class="text-sm md:text-base">Backend API Development</p>
+      <p class="text-sm md:text-base">Proficient in Node.js and Express, creating scalable and efficient backend APIs for full-stack applications.</p>
     </div>
     <div class="bg-gray-800 p-4 md:p-6 rounded-xl shadow hover:scale-105 transition-transform duration-500 fade-in">
       <h4 class="font-bold text-pink-500 mb-1 md:mb-2">MongoDB</h4>
-      <p class="text-sm md:text-base">Database Management</p>
+      <p class="text-sm md:text-base">Skilled in MongoDB database management and Mongoose ORM, designing structured, efficient, and secure data storage.</p>
     </div>
     <div class="bg-gray-800 p-4 md:p-6 rounded-xl shadow hover:scale-105 transition-transform duration-500 fade-in">
       <h4 class="font-bold text-pink-500 mb-1 md:mb-2">Git</h4>
-      <p class="text-sm md:text-base">Version Control</p>
+      <p class="text-sm md:text-base">Familiar with version control using Git, managing code efficiently, collaborating with teams, and maintaining project history.</p>
     </div>
   </div>
 </section>
