--- a/index.html
+++ b/index.html
@@ -153,15 +153,23 @@ With strong experience in the MERN stack, I enjoy creating scalable solutions an
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 md:gap-8">
     <div class="bg-gray-800 rounded-xl shadow-lg p-4 md:p-6 transform transition duration-500 hover:scale-105 hover:shadow-2xl fade-in">
       <img src="https://via.placeholder.com/300x200" alt="Portfolio" class="rounded mb-4">
-      <h4 class="font-bold mb-2 text-pink-500">Portfolio Website</h4>
-      <p class="text-gray-300 text-sm md:text-base">Professional portfolio built with React & Tailwind CSS.</p>
-      <a href="#" class="text-purple-500 hover:underline mt-2 block">View Project</a>
+      <h4 class="font-bold mb-2 text-pink-500">Online Tree Project (Full-Stack Web Application)</h4>
+      <p class="text-gray-300 text-sm md:text-base">I developed an Online Tree project using the MERN stack (MongoDB, Express, React, Node.js). The application allows users to explore, learn about, and manage different tree species online.
+
+User-friendly interface built with React and styled using Tailwind CSS.
+Backend API powered by Node.js and Express for efficient data handling.
+Database management using MongoDB and Mongoose to store tree information.
+Responsive design, making it accessible on all devices.
+Interactive functionality, allowing users to view, add, or update tree data seamlessly.</p>
     </div>
     <div class="bg-gray-800 rounded-xl shadow-lg p-4 md:p-6 transform transition duration-500 hover:scale-105 hover:shadow-2xl fade-in">
       <img src="https://via.placeholder.com/300x200" alt="E-commerce" class="rounded mb-4">
-      <h4 class="font-bold mb-2 text-pink-500">E-Commerce App</h4>
-      <p class="text-gray-300 text-sm md:text-base">Full-featured e-commerce application with shopping cart.</p>
-      <a href="#" class="text-purple-500 hover:underline mt-2 block">View Project</a>
+      <h4 class="font-bold mb-2 text-pink-500">Todo App</h4>
+      <p class="text-gray-300 text-sm md:text-base">I developed a Todo App using the MERN stack (MongoDB, Express, React, Node.js) with a modern and responsive design. The app helps users manage tasks efficiently with features like adding, editing, deleting, and tracking tasks.
+Dynamic front-end built with React and styled using Tailwind CSS for a clean and interactive interface.
+Backend API powered by Node.js and Express for smooth task management.
+Database integration using MongoDB and Mongoose to store and retrieve tasks.
+Responsive design, making the app accessible on both desktop and mobile devices.</p>
     </div>
     <div class="bg-gray-800 rounded-xl shadow-lg p-4 md:p-6 transform transition duration-500 hover:scale-105 hover:shadow-2xl fade-in">
       <img src="https://via.placeholder.com/300x200" alt="Todo App" class="rounded mb-4">
